cactus not showing up in mobile fix? changed media command

--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ left:35%;
 }
 
 
-@media screen and (min-width: 680px) {
+@media (min-width: 680px) {
     .cactus_2{
         top:36vh;
         left: -5%;
